Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50840

qdoc: single-exec mode breaks use of indexdir

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.1
    • 5.5.1
    • Build tools: qdoc
    • 280bb5c8ee0276ea81a8d68cd70adf0b72924eac

    Description

      I tried to use single-exec mode to work around QTBUG-48479, however in this case -indexdir is ignored and I'm no longer able to link to items in the Qt documentation as a result.

      Attachments

        For Gerrit Dashboard: QTBUG-50840
        # Subject Branch Project Status CR V

        Activity

          People

            gbk Martin Smith (Qt)
            jakepetroules Jake Petroules (DO NOT ASSIGN ISSUES)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes