qdoc: Warn about ignored -indexdir option

In -single-exec mode, qdoc doesn't read index files.
Therefore, the -indexdir option is ignored. qdoc now
warns immediately when it ignores the -indexdir option
in -single-exec mode.

Change-Id: I85513df04041a722bccf14ad613693f283ab0504
Task-number: QTBUG-50840
Reviewed-by: Topi Reiniö <topi.reinio@theqtcompany.com>